<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.isetkelibia.actionbar.MainActivity">
    <item
        android:id="@+id/action_settings"
        android:title="@string/action_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_home"
        android:icon="@drawable/icon_home"
        android:title="@string/home"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_search"
        android:title="@string/serach"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_item_a"
        android:title="@string/item_a"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_item_b"
        android:title="@string/item_b"
        app:showAsAction="never" />
</menu>
